[package]
name = "space_time_trees"
version = "0.1.0"
authors = ["Endre Erős <endre.eros@chalmersindustriteknik.se>"]
edition = "2021"

[dependencies]
nalgebra = "0.32.5"
futures = "0.3.30"
log = "0.4.21"
tokio = { version = "1.36.0", features = ["full", "test-util"] }
termtree = "0.4.1"
structopt = "0.3.26"
rand = "0.8.5"

[[bin]]
name = "space_tree"
path = "src/space_tree.rs"